fix(docker): 🐳 Network stabilization, static IPs, and RabbitMQ fix 🐇
Addresses several infrastructure reliability issues:

🌐 **Network & Configuration:**
- Adds a custom Docker network with the `10.100.10.0/24` subnet for predictable addressing.
- Assigns a static IP (`10.100.10.10`) to the `nginx` service for stable routing.
- Moves RabbitMQ credentials (username/password) to dedicated environment variables for better security.
- Adds necessary network and service credentials configuration to the `.env` file.

⚙️ **RabbitMQ Fixes:**
- Resolves the critical Erlang cookie permissions issue by utilizing a named volume for persistent and correctly permitted cookie storage.

📚 **Documentation:**
- Updates the `README` with detailed setup instructions reflecting the new network configuration and essential troubleshooting steps.

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ APP_URL=http://docker.loc
 
 DOCKER_NETWORK=10.100.10.0/24
 DOCKER_BRIDGE=10.100.10.1
+NGINX_IP=10.100.10.10
 
 LOG_CHANNEL=stack
 
@@ -41,6 +42,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+RABBITMQ_DEFAULT_USER=admin
+RABBITMQ_DEFAULT_PASS=admin
 
 MYSQL_DATABASE_HOST=mysql
 MYSQL_ROOT_PASSWORD=superpass
