--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.4'
 #@see https://docs.docker.com/compose/compose-file/compose-file-v3/
 x-logging:
   &default-logging
@@ -35,6 +34,9 @@ services:
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./docker/nginx/config:/etc/nginx/conf.d:ro
       - ./app:/app
+    networks:
+      default:
+        ipv4_address: ${NGINX_IP}
     logging: *default-logging
 
   php:
@@ -60,9 +62,21 @@ services:
     container_name: example_app_rabbitmq
     image: rabbitmq:management
     hostname: rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
     volumes:
-      - ./rabbitmq:/var/lib/rabbitmq:cached
+      - rabbitmq_data:/var/lib/rabbitmq
     logging: *default-logging
 
 volumes:
   composer:
+  rabbitmq_data:
+
+networks:
+  default:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: ${DOCKER_NETWORK}
+          gateway: ${DOCKER_BRIDGE}
