chore(env): clean up and normalize environment variables
- Remove duplicate and conflicting env keys
- Align Docker network and port variables with compose config
- Normalize DB, MailHog, and RabbitMQ settings
- Group variables into clear, documented sections
- Replace legacy/invalid values and null placeholders

--- a/.env.example
+++ b/.env.example
@@ -1,40 +1,104 @@
+####################################
+# Application
+####################################
 APP_NAME=docker
 APP_ENV=dev
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://docker.loc
 
-DOCKER_NETWORK=10.100.10.0/24
-DOCKER_BRIDGE=10.100.10.1
-NGINX_IP=10.100.10.10
-
 LOG_CHANNEL=stack
 
+
+####################################
+# Docker Network Configuration
+####################################
+# Custom bridge network for all containers
+DOCKER_NETWORK=172.25.0.0/16
+DOCKER_BRIDGE=172.25.0.1
+
+# Static IP for nginx container
+NGINX_IP=172.25.0.10
+
+
+####################################
+# Exposed Ports (Host → Container)
+####################################
+# MailHog
+MAILHOG_PORT_SMTP=8413
+MAILHOG_PORT_UI=7813
+
+# Database (MariaDB/MySQL)
+DB_PORT=3939
+
+# Nginx
+NGINX_HTTP_PORT=7821
+
+# RabbitMQ
+RABBITMQ_UI_PORT=15236
+RABBITMQ_AMQP_PORT=5672
+
+
+####################################
+# Database (Application-level)
+####################################
 DB_CONNECTION=mysql
+DB_HOST=db
 DB_DATABASE=docker
 DB_USERNAME=root
 DB_PASSWORD=root
 
+
+####################################
+# Database (Container-level / MariaDB)
+####################################
+MYSQL_DATABASE=docker
+MYSQL_ROOT_PASSWORD=superpass
+
+
+####################################
+# Queue / Cache / Session
+####################################
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+
+####################################
+# Mail (MailHog / SMTP)
+####################################
+MAIL_MAILER=smtp
+MAIL_HOST=mailhog
+MAIL_PORT=1025
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
+
+MAIL_FROM_ADDRESS=no-reply@docker.loc
 MAIL_FROM_NAME="${APP_NAME}"
 
+
+####################################
+# RabbitMQ
+####################################
+RABBITMQ_DEFAULT_USER=guest
+RABBITMQ_DEFAULT_PASS=guest
+
+
+####################################
+# AWS (optional / disabled)
+####################################
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 
+
+####################################
+# Pusher (optional / disabled)
+####################################
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
@@ -42,9 +106,3 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-RABBITMQ_DEFAULT_USER=admin
-RABBITMQ_DEFAULT_PASS=admin
-
-MYSQL_DATABASE_HOST=mysql
-MYSQL_ROOT_PASSWORD=superpass
