--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-#@see https://docs.docker.com/compose/compose-file/compose-file-v3/
-x-logging:
-  &default-logging
-  driver: "json-file"
+# @see https://docs.docker.com/compose/compose-file/compose-file-v3/
+
+x-logging: &default-logging
+  driver: json-file
   options:
     max-file: "5"
     max-size: "20m"
@@ -11,14 +11,17 @@ services:
     image: mailhog/mailhog
     container_name: example_app_mailhog
     restart: unless-stopped
+    ports:
+      - "${MAILHOG_PORT_SMTP}:1025"
+      - "${MAILHOG_PORT_UI}:8025"
     logging: *default-logging
 
   db:
     image: mariadb
     container_name: example_app_db
     restart: unless-stopped
-    env_file:
-      - ./.env
+    ports:
+      - "${DB_PORT}:3306"
     volumes:
       - ./db/data:/var/lib/mysql
     logging: *default-logging
@@ -30,6 +33,8 @@ services:
     restart: unless-stopped
     depends_on:
       - php
+    ports:
+      - "${NGINX_HTTP_PORT}:80"
     volumes:
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./docker/nginx/config:/etc/nginx/conf.d:ro
@@ -46,8 +51,6 @@ services:
     restart: unless-stopped
     depends_on:
       - db
-    env_file:
-      - ./.env
     volumes:
       - ./docker/php/config/msmtprc:/etc/msmtprc:ro
       - ./docker/php/config/php.ini:/usr/local/etc/php/conf.d/my.ini:ro
@@ -57,14 +60,17 @@ services:
     logging: *default-logging
 
   rabbitmq:
-    build: ./docker/rabbitmq
-    restart: always
-    container_name: example_app_rabbitmq
     image: rabbitmq:management
+    build: ./docker/rabbitmq
+    container_name: example_app_rabbitmq
     hostname: rabbitmq
+    restart: always
     environment:
       RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
       RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
+    ports:
+      - "${RABBITMQ_UI_PORT}:15672"
+      - "${RABBITMQ_AMQP_PORT}:5672"
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
     logging: *default-logging
